[project]
name = "papuan-thought-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.2",
    "django-unfold>=0.94.0",
    "pillow>=12.2.0",
    "python-decouple>=3.8",
]
